# dumpex

./: CREDITS  Dumpex.py  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
dumpex/: __init__.py  __main__.py  cli.py
dumpex/commands/: diff.py  extract.py  list_cmd.py  modules.py  peb.py  report.py  sysinfo.py  threads.py
dumpex/core/: __init__.py  memory.py  pe_utils.py
dumpex/hunt/: __init__.py  _ui.py  cs_beacon.py  encoding.py  hollowing.py  injection.py  pipe.py  stomping.py  yara_hunt.py
dumpex/rules_pkg/: __init__.py  loader.py
dumpex/ui/: colors.py  structured.py
rules/: rules.yaml
rules/yara/: cs_indicators.yar  lateral_movement.yar  suspicious_memory.yar
